welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
			gauche();
                              ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estFaceMur()) {
                ^