welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
		avance();
		if (getCouleurSol()==Color.green) {
			recule();
			return true;
		}
		if (estFaceMur()) {
			recule();
			gauche();
		}
}        
